# moonlight-webos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: computers-controller.h  main.cpp  qml-webos.qrc  qml.qrc  resources-webos.qrc  resources.qrc  streaming-controller.cpp  streaming-controller.h  unsupported-src.list
app/backend/: autoupdatechecker.cpp  computermanager.cpp  computermanager.h  nvcomputer.cpp  nvcomputer.h
app/cli/: quitstream.h  startstream.h
app/controller/: streaming.cpp  streaming.h
app/deploy/webos/: appinfo.json
app/gui/: AppView.qml  CenteredGridView.qml  ComputersView.qml  NavigableDialog.qml  NavigableItemDelegate.qml  NavigableMenu.qml  NavigableMenuItem.qml  NavigableMessageDialog.qml  PcView.qml  StreamSegue.qml  StreamingView.qml  appmodel.cpp  computermodel.cpp  computermodel.h  main.qml  sdlgamepadkeynavigation.cpp
app/gui/webos/: AppView.qml  Application.qml  NavigableDialog.qml  PcView.qml  SettingsView.qml  StreamSegue.qml
app/settings/: mappingfetcher.cpp
app/streaming/: session.cpp  session.h
app/streaming/audio/: audio.cpp
app/streaming/input/: gamepad.cpp  input.cpp
app/streaming/video/: ffmpeg.cpp  ffmpeg.h  webos.cpp  webos.h
app/streaming/video/ffmpeg-renderers/: eglvid.cpp  sdlvid.cpp
app/streaming/video/webos/: lxvideo.h
assets/: debug.env
assets/debug/: env.sh
cmake/: WebOS.cmake
ffmpeg-prebuilt/: .gitignore  CMakeLists.txt
h264bitstream/: CMakeLists.txt
libs/webos/: .gitignore  CMakeLists.txt
moonlight-common-c/: CMakeLists.txt
qml/: App.qml  ComputersView.qml  StreamingView.qml  main.qml  qml.qrc
scripts/: build-webos-ipk.sh  device-install.sh  device-launch.sh  device-mem-monitor.sh  device-monitor.sh  package.sh
src/: avcodec-check.cpp  avcodec-check.h  codec-check.cpp  codec-check.h  main.cpp  main.qml  qgstvideobuffer.cpp  qgstvideobuffer.h  streaming-controller.cpp  streaming-controller.h
tools/: ttyplot-amd64-linux
webos-metadata/: appinfo.json
